--- a/ex08.html
+++ b/ex08.html
@@ -6,7 +6,19 @@
     <title>Exercício 08</title>
 </head>
 <body>
-    
+    <h2>
+        Criar página que calcula o IMC, solicitar o peso em Kg 
+        e a altura em metros, e ao clicar no botão de calcular 
+        retornar o estado da pessoa em um parágrafo
+    </h2>
+
+        <input id="weight" type="number" placeholder="Insira seu peso">
+        <input id="height" type="number" placeholder="Insira sua altura">
+        <button onclick="ex08()">Calcular</button>
+
+
+        
+        <p id="jsReply"></p>
     <script src="script.js"></script>
 </body>
 </html>
