--- a/ex09.html
+++ b/ex09.html
@@ -6,7 +6,14 @@
     <title>Exercício 09</title>
 </head>
 <body>
-    
+    <h2>
+        Criar uma página que solicita ao 
+        usuário um número para gerar uma tabuada do 1 até o 10.
+    </h2>
+
+    <input id="number" type="text" placeholder="Insira o número">
+    <button onclick="ex09()">Calcular</button>
+    <p id="jsReply"></p>
     <script src="script.js"></script>
 </body>
 </html>
