--- a/ex10.html
+++ b/ex10.html
@@ -6,7 +6,18 @@
     <title>Exercício 10</title>
 </head>
 <body>
-    
+    <h2>
+        Criar um formulário com campos genéricos (nome, email e telefone),
+         validar para que todos os campos sejam preenchidos,
+          insira em um objeto e salve no local storage.
+    </h2>
+
+    <form action="">
+        <input id="name" type="text" placeholder="Nome">
+        <input id="email" type="email" placeholder="Email">
+        <input id="cel" type="number" placeholder="Telefone">
+        <button onclick="ex10()">Confirmar</button>
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
