outra mudança kk

--- a/ex10.html
+++ b/ex10.html
@@ -12,12 +12,12 @@
           insira em um objeto e salve no local storage.
     </h2>
 
-    <form action="">
+    <div>
         <input id="name" type="text" placeholder="Nome">
         <input id="email" type="email" placeholder="Email">
         <input id="cel" type="number" placeholder="Telefone">
         <button onclick="ex10()">Confirmar</button>
-    </form>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
